--- a/index.html
+++ b/index.html
@@ -49,35 +49,35 @@
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
            </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
@@ -86,35 +86,35 @@
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
            </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
@@ -123,35 +123,35 @@
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
            </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
@@ -160,35 +160,35 @@
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
            </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
@@ -197,35 +197,35 @@
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
            </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
@@ -234,35 +234,35 @@
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
            </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
         <div class="cd">
                 <h1 class="top">Nandini</h1>
             <div class="name">
-                <img src="../assets/images/mute.jpeg"  class="pics"/>
+                <img src="mute.jpeg"  class="pics"/>
                 <h1 class="pictext">Nandini</h1>
             </div>
         </div>
